<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_login"
    tools:context=".Views.LoginActivity">

    <Button
        android:id="@+id/btnAtrasLogin"
        style="@style/titulo"
        android:layout_width="154dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/boton"
        android:padding="5dp"
        android:text="@string/text_btn_volver_atras"
        android:textSize="30sp"
        app:fontFamily="@font/font_amatic_bold"
        app:layout_constraintEnd_toEndOf="@+id/btnIngresarGoogle"
        app:layout_constraintStart_toStartOf="@+id/btnIngresarGoogle"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresarGoogle" />

    <Button
        android:id="@+id/btnIngresar"
        style="@style/texto_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/boton"
        android:text="@string/text_btn_ingreso"
        app:layout_constraintEnd_toEndOf="@+id/etClaveLogin"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/etClaveLogin"
        app:layout_constraintTop_toBottomOf="@+id/etClaveLogin" />

    <Button
        android:id="@+id/btnIngresarGoogle"
        style="@style/texto_boton_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/boton"
        android:drawableStart="@drawable/ic_google_color"
        android:drawablePadding="12dp"
        android:text="@string/text_btn_ingreso_google"
        app:layout_constraintEnd_toEndOf="@+id/btnIngresar"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/btnIngresar"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="371dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="43dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="692dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        style="@style/titulo"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/text_login"
        app:fontFamily="@font/font_amatic_bold"
        android:textSize="44sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/etEmailLogin"
        style="@style/input"
        android:layout_width="280dp"
        android:layout_height="53dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/etClaveLogin"
        style="@style/input"
        android:layout_width="280dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>