<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_degradado_morado"
    tools:context=".Views.RegistroActivity">

    <Button
        android:id="@+id/btnAtrasRegistro"
        style="@style/texto_boton_Volver"
        android:layout_width="60dp"
        android:layout_height="42dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/hacia_atras"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRegistrarse"
        style="@style/texto_boton"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/boton_ovalo"
        android:fontFamily="sans-serif-medium"
        android:text="@string/text_btn_registrarse"
        android:textColor="#5D1D88"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="@+id/etNombre"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/etNombre"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        style="@style/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/text_registro"
        android:textSize="44sp"
        app:fontFamily="@font/font_amatic_bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <EditText
        android:id="@+id/etCi"
        style="@style/input"
        android:layout_width="340dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_stilo1"
        android:drawableStart="@android:drawable/ic_dialog_info"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hint_ci"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/etClaveRegistro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etClaveRegistro"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/etNombre"
        style="@style/input"
        android:layout_width="340dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_stilo1"
        android:drawableStart="@drawable/ic_ci_focused"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hint_nombre_completo"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/etClaveRegistro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etClaveRegistro"
        app:layout_constraintTop_toBottomOf="@+id/etClaveRegistro" />

    <EditText
        android:id="@+id/etEmailRegistro"
        style="@style/input"
        android:layout_width="340dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_stilo1"
        android:drawableStart="@drawable/ic_email_focused"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/etClaveRegistro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etClaveRegistro"
        app:layout_constraintTop_toBottomOf="@+id/etCi" />

    <EditText
        android:id="@+id/etClaveRegistro"
        style="@style/input"
        android:layout_width="340dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_stilo1"
        android:drawableStart="@drawable/ic_password_focused"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/etEmailRegistro" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="33dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="701dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="212dp"
        android:layout_height="205dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/img_joya_1" />
</androidx.constraintlayout.widget.ConstraintLayout>