<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Views.InfoActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="381dp"
        android:layout_height="665dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:text="@string/txt_titulo_info"
                android:textSize="44sp"
                app:fontFamily="@font/font_amatic_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="284dp"
                android:layout_height="242dp"
                android:layout_marginLeft="50dp"
                app:layout_constraintEnd_toEndOf="@+id/scrollView"
                app:layout_constraintStart_toStartOf="@+id/scrollView"
                app:layout_constraintTop_toTopOf="@+id/scrollView"
                app:srcCompat="@drawable/img_demostracion_3" />

            <TextView
                android:id="@+id/textView2"
                style="@style/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/txt_titulo2_info"
                android:textSize="30sp"
                app:fontFamily="@font/font_amatic_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="306dp"
                android:layout_height="511dp"
                android:layout_marginLeft="50dp"
                app:srcCompat="@drawable/img_historia" />

            <Button
                android:id="@+id/btnAtras"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="1dp"
                android:padding="5dp"
                style="@style/titulo"
                android:background="@drawable/boton"
                android:text="@string/text_btn_volver_atras"
                android:textSize="30sp"
                app:fontFamily="@font/font_amatic_bold"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>