<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rcView"
        app:cardBackgroundColor="@color/indigo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="@drawable/boton"
                android:text="@string/btn_texto_agregar"
                android:textColor="#fff"
                app:layout_constraintEnd_toEndOf="@+id/btnAdicionar"
                app:layout_constraintHorizontal_bias="0.471"
                app:layout_constraintStart_toStartOf="@+id/btnRestar"
                app:layout_constraintTop_toBottomOf="@+id/txtNombreProducto" />

            <ImageView
                android:id="@+id/imgProducto"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/img_anillo_plata"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.083"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtNombreProducto"
                style="@style/titulo_nom_producto"
                android:layout_width="131dp"
                android:layout_height="154dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_nom_producto"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.135"
                app:layout_constraintStart_toEndOf="@+id/imgProducto"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtPrecio"
                style="@style/titulo_nom_producto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/txt_precio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNombreProducto" />

            <TextView
                android:id="@+id/txtStock"
                style="@style/titulo_nom_producto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/txt_cantidad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrecio" />

            <TextView
                android:id="@+id/txtCantidad"
                style="@style/titulo_nom_producto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="1"
                app:layout_constraintEnd_toStartOf="@+id/btnAdicionar"
                app:layout_constraintHorizontal_bias="0.459"
                app:layout_constraintStart_toEndOf="@+id/btnRestar"
                app:layout_constraintTop_toBottomOf="@+id/imgProducto" />

            <Button
                android:id="@+id/btnAdicionar"
                style="@style/texto_boton_3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="44dp"
                android:background="@drawable/boton"
                android:text="+"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgProducto" />

            <Button
                android:id="@+id/btnRestar"
                style="@style/texto_boton_3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/boton"
                android:text="-"
                app:layout_constraintEnd_toStartOf="@+id/btnAdicionar"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgProducto" />

            <ProgressBar
                android:id="@+id/prBarImagen"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/gold"
                app:layout_constraintEnd_toEndOf="@+id/imgProducto"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="@+id/imgProducto"
                app:layout_constraintTop_toTopOf="@+id/imgProducto" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>